Feature: Se realizan soluciones a los problemas identificados en las pruebas unitarias